test/tests/stages/18_structures/invalid_parse/struct_decl_two_kws.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  struct
  struct
  identifier(s)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
